tdf#129574 sw: fix RTF export of table of contents

The problem is that the hyperlink that starts at the start of the first
paragraph of the ToX content is written to RTF before the TOC field
itself, so the hyperlink contains the entire ToX:

{{\field{\*\fldinst HYPERLINK "#__RefHeading___Toc250984071" }{\fldrslt {\rtlch\langfe1024 \ltrch\lang1024\loch
{\field{\*\fldinst { TOC \\o "1-3" \\h \\z }}{\fldrslt {1.India\tab 1}}}}

This is because the HYPERLINK is written into m_aRun but the TOC into
m_aRunText.

Interestingly StartRun() asserts that m_aRunText should be empty, so we
don't try to change StartURL() to write the HYPERLINK into m_aRunText.

The only function that moves text from m_aRunText to m_aRun is
EndRun(), so wrap the TOC field in StartRun()/EndRun().

This breaks the export of the ToX to DOCX because a mysterious SDT is
no longer written around the field but only the field result, so only do
this for RTF.

Change-Id: I22e45c4a9c9ce6edb2b9114b4a29b2a373ec3284
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/86860
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@cib.de>